docs/api/qiskit/0.33/qiskit.algorithms.optimizers.NELDER_MEAD.mdx
---
title: NELDER_MEAD (v0.33)
description: API reference for qiskit.algorithms.optimizers.NELDER_MEAD in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.optimizers.NELDER_MEAD
---

<span id="nelder-mead" />

# NELDER\_MEAD

<Class id="qiskit.algorithms.optimizers.NELDER_MEAD" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/algorithms/optimizers/nelder_mead.py" signature="NELDER_MEAD(maxiter=None, maxfev=1000, disp=False, xatol=0.0001, tol=None, adaptive=False, options=None, **kwargs)" modifiers="class">
  Bases: `qiskit.algorithms.optimizers.scipy_optimizer.SciPyOptimizer`

  Nelder-Mead optimizer.

  The Nelder-Mead algorithm performs unconstrained optimization; it ignores bounds or constraints. It is used to find the minimum or maximum of an objective function in a multidimensional space. It is based on the Simplex algorithm. Nelder-Mead is robust in many applications, especially when the first and second derivatives of the objective function are not known.

  However, if the numerical computation of the derivatives can be trusted to be accurate, other algorithms using the first and/or second derivatives information might be preferred to Nelder-Mead for their better performance in the general case, especially in consideration of the fact that the Nelder–Mead technique is a heuristic search method that can converge to non-stationary points.

  Uses scipy.optimize.minimize Nelder-Mead. For further detail, please refer to See [https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html)

  **Parameters**

  *   **maxiter** (`Optional`\[`int`]) – Maximum allowed number of iterations. If both maxiter and maxfev are set, minimization will stop at the first reached.
  *   **maxfev** (`int`) – Maximum allowed number of function evaluations. If both maxiter and maxfev are set, minimization will stop at the first reached.
  *   **disp** (`bool`) – Set to True to print convergence messages.
  *   **xatol** (`float`) – Absolute error in xopt between iterations that is acceptable for convergence.
  *   **tol** (`Optional`\[`float`]) – Tolerance for termination.
  *   **adaptive** (`bool`) – Adapt algorithm parameters to dimensionality of problem.
  *   **options** (`Optional`\[`dict`]) – A dictionary of solver options.
  *   **kwargs** – additional kwargs for scipy.optimize.minimize.

  ## Methods

  <span id="qiskit-algorithms-optimizers-nelder-mead-get-support-level" />

  ### get\_support\_level

  <Function id="qiskit.algorithms.optimizers.NELDER_MEAD.get_support_level" signature="NELDER_MEAD.get_support_level()">
    Return support level dictionary
  </Function>

  <span id="qiskit-algorithms-optimizers-nelder-mead-gradient-num-diff" />

  ### gradient\_num\_diff

  <Function id="qiskit.algorithms.optimizers.NELDER_MEAD.gradient_num_diff" signature="NELDER_MEAD.gradient_num_diff(x_center, f, epsilon, max_evals_grouped=1)" modifiers="static">
    We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center.

    **Parameters**

    *   **x\_center** (*ndarray*) – point around which we compute the gradient
    *   **f** (*func*) – the function of which the gradient is to be computed.
    *   **epsilon** (*float*) – the epsilon used in the numeric differentiation.
    *   **max\_evals\_grouped** (*int*) – max evals grouped

    **Returns**

    the gradient computed

    **Return type**

    grad
  </Function>

  <span id="qiskit-algorithms-optimizers-nelder-mead-minimize" />

  ### minimize

  <Function id="qiskit.algorithms.optimizers.NELDER_MEAD.minimize" signature="NELDER_MEAD.minimize(fun, x0, jac=None, bounds=None)">
    Minimize the scalar function.

    **Parameters**

    *   **fun** (`Callable`\[\[`Union`\[`float`, `ndarray`]], `float`]) – The scalar function to minimize.
    *   **x0** (`Union`\[`float`, `ndarray`]) – The initial point for the minimization.
    *   **jac** (`Optional`\[`Callable`\[\[`Union`\[`float`, `ndarray`]], `Union`\[`float`, `ndarray`]]]) – The gradient of the scalar function `fun`.
    *   **bounds** (`Optional`\[`List`\[`Tuple`\[`float`, `float`]]]) – Bounds for the variables of `fun`. This argument might be ignored if the optimizer does not support bounds.

    **Return type**

    `OptimizerResult`

    **Returns**

    The result of the optimization, containing e.g. the result as attribute `x`.
  </Function>

  <span id="qiskit-algorithms-optimizers-nelder-mead-optimize" />

  ### optimize

  <Function id="qiskit.algorithms.optimizers.NELDER_MEAD.optimize" signature="NELDER_MEAD.optimize(num_vars, objective_function, gradient_function=None, variable_bounds=None, initial_point=None)">
    Perform optimization.

    **Parameters**

    *   **num\_vars** (*int*) – Number of parameters to be optimized.
    *   **objective\_function** (*callable*) – A function that computes the objective function.
    *   **gradient\_function** (*callable*) – A function that computes the gradient of the objective function, or None if not available.
    *   **variable\_bounds** (*list\[(float, float)]*) – List of variable bounds, given as pairs (lower, upper). None means unbounded.
    *   **initial\_point** (*numpy.ndarray\[float]*) – Initial point.

    **Returns**

    **point, value, nfev**

    point: is a 1D numpy.ndarray\[float] containing the solution value: is a float with the objective function value nfev: number of objective function calls made if available or None

    **Raises**

    **ValueError** – invalid input
  </Function>

  <span id="qiskit-algorithms-optimizers-nelder-mead-print-options" />

  ### print\_options

  <Function id="qiskit.algorithms.optimizers.NELDER_MEAD.print_options" signature="NELDER_MEAD.print_options()">
    Print algorithm-specific options.
  </Function>

  <span id="qiskit-algorithms-optimizers-nelder-mead-set-max-evals-grouped" />

  ### set\_max\_evals\_grouped

  <Function id="qiskit.algorithms.optimizers.NELDER_MEAD.set_max_evals_grouped" signature="NELDER_MEAD.set_max_evals_grouped(limit)">
    Set max evals grouped
  </Function>

  <span id="qiskit-algorithms-optimizers-nelder-mead-set-options" />

  ### set\_options

  <Function id="qiskit.algorithms.optimizers.NELDER_MEAD.set_options" signature="NELDER_MEAD.set_options(**kwargs)">
    Sets or updates values in the options dictionary.

    The options dictionary may be used internally by a given optimizer to pass additional optional values for the underlying optimizer/optimization function used. The options dictionary may be initially populated with a set of key/values when the given optimizer is constructed.

    **Parameters**

    **kwargs** (*dict*) – options, given as name=value.
  </Function>

  <span id="qiskit-algorithms-optimizers-nelder-mead-wrap-function" />

  ### wrap\_function

  <Function id="qiskit.algorithms.optimizers.NELDER_MEAD.wrap_function" signature="NELDER_MEAD.wrap_function(function, args)" modifiers="static">
    Wrap the function to implicitly inject the args at the call of the function.

    **Parameters**

    *   **function** (*func*) – the target function
    *   **args** (*tuple*) – the args to be injected

    **Returns**

    wrapper

    **Return type**

    function\_wrapper
  </Function>

  ## Attributes

  ### bounds\_support\_level

  <Attribute id="qiskit.algorithms.optimizers.NELDER_MEAD.bounds_support_level">
    Returns bounds support level
  </Attribute>

  ### gradient\_support\_level

  <Attribute id="qiskit.algorithms.optimizers.NELDER_MEAD.gradient_support_level">
    Returns gradient support level
  </Attribute>

  ### initial\_point\_support\_level

  <Attribute id="qiskit.algorithms.optimizers.NELDER_MEAD.initial_point_support_level">
    Returns initial point support level
  </Attribute>

  ### is\_bounds\_ignored

  <Attribute id="qiskit.algorithms.optimizers.NELDER_MEAD.is_bounds_ignored">
    Returns is bounds ignored
  </Attribute>

  ### is\_bounds\_required

  <Attribute id="qiskit.algorithms.optimizers.NELDER_MEAD.is_bounds_required">
    Returns is bounds required
  </Attribute>

  ### is\_bounds\_supported

  <Attribute id="qiskit.algorithms.optimizers.NELDER_MEAD.is_bounds_supported">
    Returns is bounds supported
  </Attribute>

  ### is\_gradient\_ignored

  <Attribute id="qiskit.algorithms.optimizers.NELDER_MEAD.is_gradient_ignored">
    Returns is gradient ignored
  </Attribute>

  ### is\_gradient\_required

  <Attribute id="qiskit.algorithms.optimizers.NELDER_MEAD.is_gradient_required">
    Returns is gradient required
  </Attribute>

  ### is\_gradient\_supported

  <Attribute id="qiskit.algorithms.optimizers.NELDER_MEAD.is_gradient_supported">
    Returns is gradient supported
  </Attribute>

  ### is\_initial\_point\_ignored

  <Attribute id="qiskit.algorithms.optimizers.NELDER_MEAD.is_initial_point_ignored">
    Returns is initial point ignored
  </Attribute>

  ### is\_initial\_point\_required

  <Attribute id="qiskit.algorithms.optimizers.NELDER_MEAD.is_initial_point_required">
    Returns is initial point required
  </Attribute>

  ### is\_initial\_point\_supported

  <Attribute id="qiskit.algorithms.optimizers.NELDER_MEAD.is_initial_point_supported">
    Returns is initial point supported
  </Attribute>

  ### setting

  <Attribute id="qiskit.algorithms.optimizers.NELDER_MEAD.setting">
    Return setting
  </Attribute>

  ### settings

  <Attribute id="qiskit.algorithms.optimizers.NELDER_MEAD.settings">
    **Return type**

    `Dict`\[`str`, `Any`]
  </Attribute>
</Class>

